# mate-rov-2025

./: Cargo.toml
common/: Cargo.toml
common/src/: components.rs  ctrlc.rs  ecs_sync.rs
motor_math/: Cargo.toml
motor_math/src/: blue_rov.rs  lib.rs  motor_preformance.rs  solve.rs  utils.rs  x3d.rs
motor_math/src/solve/: forward.rs  reverse.rs
networking/: Cargo.toml
robot/: Cargo.toml  robot_better.toml
robot/src/peripheral/: mmc5983.rs
robot_new/: Cargo.toml  robot.toml
robot_new/src/: config.rs  main.rs
robot_new/src/config/: camera.rs  control.rs  interfaces.rs  servo.rs  thruster.rs
stable_hashmap/: Cargo.toml
stable_hashmap/src/: lib.rs
surface/: Cargo.toml
surface/src/: attitude.rs  ui.rs  video_display_2d_tile.rs  video_pipelines.rs  video_stream.rs
surface/src/video_pipelines/: measure.rs  squares.rs  undistort.rs
