[package]
name = "motor_math"
version = "0.1.0"
edition = "2021"

# TODO: Are all of these needed?
[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
ahash = "0.8"

num = "0.4"
num-dual = "0.9"
nalgebra = { version = "0.33", features = ["serde-serialize"] }

num_enum = "0.7"

anyhow = "1"
tracing = "0.1"

bevy_reflect = "0.14"
