[package]
name = "motor_math"
version = "0.1.0"
edition = "2021"

# TODO: Are all of these needed?
[dependencies]
stable_hashmap = { path = "../stable_hashmap" }

csv = "1"
serde = { version = "1", features = ["derive"] }
# ahash = { version = "0.8" }

num = "0.4"
num-dual = { git = "https://github.com/itt-ustutt/num-dual.git", rev = "f4123e30702ec3786c44d70ff66c9afc00583338" }
nalgebra = { version = "0.33", features = ["serde-serialize"] }

num_enum = "0.7"

anyhow = "1"
tracing = "0.1"

bevy_reflect = "0.14"
