[package]
name = "robot_new"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
networking = { path = "../networking" }
motor_math = { path = "../motor_math" }

bevy = { version = "0.14", default-features = false }

tracing = "0.1"
tracing-subscriber = "0.3"

rppal = { version = "0.18", features = ["hal"] }
rgb = "0.8"

# Version 30 is avaible
sysinfo = { version = "0.29", default-features = false }

ahrs = { git = "https://github.com/jmagnuson/ahrs-rs.git" }
nalgebra = { version = "0.32", features = ["convert-glam027"] }
glam = { version = "0.27", features = ["serde"] }

anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
crossbeam = "0.8"
ahash = "0.8"

[features]
tracy = ["bevy/trace_tracy", "common/tracy_frame_mark"]
