[package]
name = "surface"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
networking = { path = "../networking" }
motor_math = { path = "../motor_math" }

bevy = { version = "0.14", features = ["wayland", "dynamic_linking"] }
egui = "0.28"
egui_extras = "0.28"
bevy_egui = { version = "0.28", default-features = false }
bevy-inspector-egui = "0.25"
leafwing-input-manager = "0.14"
bevy_panorbit_camera = "0.19"
bevy_mod_picking = "0.20"

tracing = "0.1"
tracing-subscriber = "0.3"

anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
crossbeam = "0.8"
ahash = "0.8"
time = { version = "0.3", features = ["local-offset", "formatting"] }

opencv = "0.92"
# Wouldnt compile with dnn, need to make an issue
# opencv = { version = "0.88", default-features = false, features = [
# 	"alphamat",
# 	"aruco",
# 	"aruco_detector",
# 	"barcode",
# 	"bgsegm",
# 	"bioinspired",
# 	"calib3d",
# 	"ccalib",
# 	"cudaarithm",
# 	"cudabgsegm",
# 	"cudacodec",
# 	"cudafeatures2d",
# 	"cudafilters",
# 	"cudaimgproc",
# 	"cudaobjdetect",
# 	"cudaoptflow",
# 	"cudastereo",
# 	"cudawarping",
# 	"cvv",
# 	#"dnn",
# 	"dnn_superres",
# 	"dpm",
# 	"face",
# 	"features2d",
# 	"flann",
# 	"freetype",
# 	"fuzzy",
# 	"gapi",
# 	"hdf",
# 	"hfs",
# 	"highgui",
# 	"img_hash",
# 	"imgcodecs",
# 	"imgproc",
# 	"intensity_transform",
# 	"line_descriptor",
# 	# "mcc",
# 	"ml",
# 	"objdetect",
# 	"optflow",
# 	"ovis",
# 	"phase_unwrapping",
# 	"photo",
# 	"plot",
# 	"quality",
# 	"rapid",
# 	"rgbd",
# 	"saliency",
# 	"sfm",
# 	"shape",
# 	"stereo",
# 	"stitching",
# 	"structured_light",
# 	"superres",
# 	"surface_matching",
# 	"text",
# 	"tracking",
# 	"video",
# 	"videoio",
# 	"videostab",
# 	"viz",
# 	"wechat_qrcode",
# 	"xfeatures2d",
# 	"ximgproc",
# 	"xobjdetect",
# 	"xphoto",
# ] }

# *brings in all of tokio for a single function*
tokio = { version = "1", features = ["full"] }
bevy-tokio-tasks = { git = "https://github.com/foxzool/bevy-tokio-tasks.git" }

[features]
tracy = ["bevy/trace_tracy"]
